[tool.poetry]
name = "hydrakon"
version = "0.1.0"
description = "CLI tool for testing and managing Hydrakon packages."
authors = ["Aditya S <as2397@hw.ac.uk>"]

[tool.poetry.dependencies]
python = "^3.10"
typer = {extras = ["all"], version = "^0.9.0"}
rich = "^13.0.0"

[tool.poetry.scripts]
hydrakon = "hydrakon.main:app"
hdk = "hydrakon.main:app"